2009-09-04 Alexander Malysh <amalysh at kannel.org>
    * aclocal.m4, configure, configure.in, gw/dlr_mysql.c, gwlib/dbpool_mysql.c,
      test/test_dbpool.c: implemented select/update function calls for dbpool_mysql. This
      require mysql prepared statement support and therefore mysql version >= 4.1.
      Changed dlr_mysql to use these new function calls. This fixes #258.

2009-09-03 Alexander Malysh <amalysh at kannel.org>
    * gw/smsc/smpp_pdu.c: fixed memory leak.

2009-09-02 Alexander Malysh <amalysh at kannel.org>
    * doc/userguide/userguide.xml, gw/smsc/smpp_pdu.[ch], gw/smsc/smsc_smpp.c, test/drive_smpp.c,
      test/drive_smpp.conf, test/test_smsc.c: implemented smsc-id config option for smpp-tlv group.

2009-09-01 Alexander Malysh <amalysh at kannel.org>
    * gw/bearerbox.c: fixed memory leak

2009-08-31 Alejandro Guerrieri <aguerrieri at kannel.org>
    * gw/bb_smscconn.c, gw/bearerbox.c, gw/bearerbox.h,
      doc/userguide/userguide.xml: limit of 1M messages on outgoing queue limit
      documented. Small code cleanup.

2009-08-28 Andreas Fink <andreas at fink.org>
    * util/start-stop-daemon.c: fix compilation under MacOS X 10.6

2009-08-28 Alexander Malysh <amalysh at kannel.org>
    * gw/bb_smscconn.c: always initialize msgdata because too many parts in
      kannel expect msgdata non NULL.

2009-08-24 Alexander Malysh <amalysh at kannel.org>
    * gw/smsc/smsc_at.c: fixed timeout value passed to select. This should fix #514.

2009-08-12 Alexander Malysh <amalysh at kannel.org>
    * gw/smsc/smsc_at.[ch]: changes as follows:
      - changed at2_read_line to first try buffer and only then try to read from device.
        This should give us some speedup.
      - populate timeout to select. This fixes to high CPU usage.
      - more error handling.
      - variuos fixes.

2009-08-07 Alexander Malysh <amalysh at kannel.org>
    * gw/dlr_oracle.c: fixed table name in dlr_flush_oracle.

2009-07-28 Alexander Malysh <amalysh at kannel.org>